--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node src/app.js",
-        "dev": "nodemon src/app.js"
+        "dev": "nodemon src/app.js -e js,hbs"
     },
     "keywords": [],
     "author": "",
@@ -13,7 +13,9 @@
     "dependencies": {
         "express": "^4.16.4",
         "hbs": "^4.0.1",
-        "nodemon": "^2.0.19",
         "postman-request": "^2.88.1-postman.31"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.19"
     }
 }
